# weather-api

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  IMPLEMENTATION_REPORT.md  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  main.py
app/api/: models.py  routes.py  web_routes.py
app/core/: __init__.py  cache.py  config.py  logging.py
app/services/: health_service.py  location_service.py  timezone_service.py  weather_service.py  yrno_client.py
app/templates/: base.html  forecast.html  index.html
docs/: API.md  ARCHITECTURE.md
tests/: __init__.py  conftest.py  test_forecast_endpoint.py  test_health_service.py  test_location_service.py  test_models.py  test_timezone_service.py  test_weather_service.py
tests/integration/: test_belgrade_forecast.py
